# adaptative_uptake_of_circular_np

./: .pre-commit-config.yaml  README.md  data_for_phase_diagram.txt  data_for_phase_proportion_vs_r.txt  pyproject.toml  requirements.txt  setup.py
figures/: utils.py
metamodel/: data_representativeness.py  dataset_for_metamodel_creation.txt  metamodel_creation.py  metamodel_validation.py
metamodel_implementation/: data_representativeness.py  dataset_for_metamodel_creation.txt  metamodel_Kriging_trainingamount_0.7.pkl  metamodel_creation.py  metamodel_validation.py  utils.py
model/: cellular_uptake_rigid_particle.py  system_definition.py  utils_cellular_uptake_rigid_particle.py
np_uptake/figures/: utils.py
np_uptake/metamodel_implementation/: data_representativeness.py  dataset_for_metamodel_creation.txt  metamodel_creation.py  metamodel_validation.py  utils.py
np_uptake/model/: cellular_uptake_rigid_particle.py  data_for_sensitivity_analysis_phaseproportion_mechadapt.txt  phase_diagrams.py  phase_proportions.py  system_definition.py
np_uptake/sensitivity_analysis/: sensitivity_analysis.py
sensitivity_analysis/: sensitivity_analysis.py  sensitivityalgo=Jansen_size=20000_metamodel=Kriging_trainingamount=0.7.pkl  sensitivityalgo=Martinez_size=20000_metamodel=Kriging_trainingamount=0.7.pkl  sensitivityalgo=MauntzKucherenko_size=20000_metamodel=Kriging_trainingamount=0.7.pkl  sensitivityalgo=Saltelli_size=20000_metamodel=Kriging_trainingamount=0.7.pkl
workflow/: reproduce.sh
